syntax = "proto3";

package com.hometopia.proto.district;

option java_multiple_files = true;
option java_package = "com.hometopia.proto.district";
option java_outer_classname = "DistrictProto";

service DistrictGrpcService {
  rpc getDistrict(GetDistrictRequest) returns (GetDistrictResponse) {
  }
}

message GetDistrictRequest {
  string name = 1;
  int32 provinceCode = 2;
  string countryCode = 3;
}

message GetDistrictResponse {
  int32 code = 1;
  string name = 2;
}